# nifty-portfolio-optimizer

./: .env.development  .env.example  .env.production  .env.test  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  app.py  config.py  docker-compose.prod.yml  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
alertmanager/: alerting_rules.yml  alertmanager.yml
backend/: Dockerfile  main.py
backend/database/: __init__.py
backend/repositories/: portfolio_repository.py
backend/routers/: benchmark.py  portfolio.py  stocks.py
backend/schemas/: benchmark.py  portfolio.py
backend/services/: benchmark_service.py  portfolio_service.py
data/: nifty_close_prices.csv
docs/: api.md  architecture.md  benchmarks.md  capacity_planning.md  chaos_testing.md  cost_estimate.md  deployment.md  design_decisions.md  disaster_recovery.md  evolution.md  load_testing.md  low_level_design.md  production_checklist.md  reliability.md  scaling.md  security.md  security_audit.md  system_design.md  testing.md
docs/decisions/: 001-why-fastapi.md  002-why-sqlalchemy-core.md  003-why-redis.md  (+3 more)
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
nginx/: nginx.conf  nginx.ssl.conf
scripts/: backup_db.sh  benchmark.py  chaos_test.sh  entrypoint.sh
src/: benchmark.py  dashboard.py  data_service.py  database.py  downloader.py  optimizer.py  returns.py  simulator.py  utils.py  visualization.py
tests/: conftest.py  test_auth_service.py  test_database.py  test_phase8_jobs.py  test_phase9_sre.py  test_portfolio_repository.py  test_portfolio_service.py  test_security.py  test_user_repository.py
(+85 files in other folders)
